# psfv

./: README.md  pyproject.toml
docs/source/: conf.py  psfv.acces_data.rst
psfv/: __init__.py  acces_data.py  psf_fit.py  psf_lc.py  sap.py  some_plots.py
source/: modules.rst  psfv.psf_lc.rst  psfv.some_plots.rst
tutorial/: psf_tutorial.ipynb
